--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2346,7 +2346,7 @@ GraniteWidgetsWelcome {
 headerbar {
   padding: 0px 13px;
   min-height: 34px;
-  background: linear-gradient(to bottom, #fff, #fff);
+  background: #fff;
   color: #31363D;
   border-radius: 0; }
   .titlebar:backdrop,
@@ -5755,7 +5755,7 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   transition: none;
   box-shadow: none; }
   #gnc-id-main-window .arrow.button.toggle:hover {
-    border-color: #F67E7D; }
+    border-color: #00D3A7; }
 
 .xfce4-panel.panel {
   background-color: #222e39;
